--- a/index.html
+++ b/index.html
@@ -266,17 +266,14 @@ $(document).ready(function () {
 </div>
 
 
-<p>Hello, Website!</p>
-<p>For more information about simple R Markdown websites, please read
-the documentation at <a
-href="https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html"
-class="uri">https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html</a>.</p>
-<p>Please also note that simple R Markdown sites are <em>not</em> based
-on <strong>blogdown</strong>. They are probably good for websites with
-only a few Rmd documents. For larger-scale and more sophisticated
-websites (such as blogs), you may want to use <strong>blogdown</strong>
-instead: <a href="https://github.com/rstudio/blogdown"
-class="uri">https://github.com/rstudio/blogdown</a>.</p>
+<p>Hello!</p>
+<p>My name is Tucker Mackie and I am currently attending Appalachian
+State University. I graduate this December with a Bachelors degree of
+Arts and Science with a concentration in Statistics. As I have studied
+my degree I have picked up many skills in coding and programming. I have
+become highly proficient in R, proficient in Python, proficient in SQL,
+highly proficient in Excel. Using these programs I have been able to
+learn many skills and complete many tests.</p>
 
 
 
